widened tape box to avoid horizontal scrollbar beyond 10^9

--- a/primebox.css
+++ b/primebox.css
@@ -9,10 +9,10 @@
 
 #primebox-number-tape {
   height: 160px;
-  width: 120px;
+  width: 130px;
   position: absolute;
   top: 50px;
-  left: 47px;
+  left: 57px;
   background-color: #ededed;
   border: 1px solid #919191;
   padding: 2px;
@@ -28,13 +28,12 @@
   line-height: 1.2em;
 }
 
-
 #primebox-next-button {
   width: 50px;
   display: block;
   position: absolute;
   top: 15px;
-  left: 85px;
+  left: 100px;
 }
 
 div#primebox-reset-switch {
